<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/horizontalMargin">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/smallMargin"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/iv_broccoli"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/broccoli_and_co"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_request_text"
                    style="@style/TextViewStyle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/horizontalMargin"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="@dimen/horizontalMargin"
                    android:gravity="center"
                    android:text="Please enter details to request an invitation." />
            </LinearLayout>

            <TextView
                style="@style/TextViewStyle.Et_Label_Style"
                android:layout_marginTop="25dp"
                android:text="Email Address" />

            <EditText
                android:id="@+id/et_email_address"
                style="@style/Et_Form_Style"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/error_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_error_msg"
                android:textColor="@color/error"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                style="@style/TextViewStyle.Et_Label_Style"
                android:layout_marginTop="25dp"
                android:text="@string/confirm_email_address" />

            <EditText
                android:id="@+id/et_confirm_email"
                style="@style/Et_Form_Style"
                android:hint="@string/confirm_email_address"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/error_confirm_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_error_msg"
                android:textColor="@color/error"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                style="@style/TextViewStyle.Et_Label_Style"
                android:layout_marginTop="25dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/et_name"
                style="@style/Et_Form_Style"
                android:hint="Enter full name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/err_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_error_msg"
                android:textColor="@color/error"
                android:textSize="10sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_send_inivitaion"
                style="@style/Button_Style"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/largeMargin"
                android:text="Request Invitation"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>
</layout>